# MLProbs

./: MLProbs.py  README.md  ReadMe.md  getseq_lens.py  requirements.txt  script.py
BENCH/: bali3.txt  ox.txt  sabre.txt
BENCH/bali3/: BB11013  BB11014  BB11015  BB11021  BB11028  BB11029  BB11031  BB11037  BB12001  BB12005  BB12011  BB12014  BB12015  BB12017  BB12019  BB12021  BB12022  BB12024  BB12028  BB12029  BB12032  BB12035  BB12037  BB12041  BB12042  BB20004  BB20007  BB20008  BB20016  BB20020  BB20026  BB20031  BB20032  BB20033  BB20035  BB20037  BB30001  BB30002  BB30008  BB30012  (+72 more)
BENCH/bali3_30/: BB11005  BB11009  BB11010  BB11016  BB11020  BB11024  BB11026  BB11032  BB11034  BB12006  BB12020  BB12023  BB12026  BB12034  BB12044  BB20001  BB20003  BB20005  BB20010  BB20011  BB20012  BB20013  BB20014  BB20015  BB20019  BB20025  BB20034  BB20041  BB30003  BB30015  BB30016  BB30017  BB30018  BB30021  BB30029  BB30030  BB40003  BB40005  BB40013  BB40015  (+50 more)
BENCH/ox/: 12s103  12s112  12t107  12t108  12t113  136s16  136s19  140t11  581s11  581s14  581t18  620t11  620t12  _104s6  _12s19  _12s45  _12s57  _12s58  _12s59  _12s80  _12s82  _12s83  _12s84  _134t4  _137t4  _138t2  _186t1  _197t3  _200t2  _22s24  _22s30  _22s33  _22s36  _22s38  _22s41  _22s44  _22t47  _22t56  _22t60  _263t3  (+89 more)
BENCH/ox_30/: 12s117  (+55 more)
PnpProbs/: alter_pnpprobs
TEST/: script.py
calc_col_score/: calc_col_score
classifier/: ABC_train.py
getTC_SP/: get_PID_30_100.py  output.xlsx  ox.txt  oxx.txt  script_.py  script_all.py  tmp
realign/: TMP.TXT  execution.stats  quickprobs  script.py  time.txt  time_quickprobs.txt
realign/QuickProbs/src/: CMakeLists.txt  History.txt
realign/QuickProbs/src/Alignment/: Alignment.h  CMakeLists.txt
realign/QuickProbs/src/Alignment/DataStructures/: ContiguousMultiSequence.cpp  ContiguousMultiSequence.h  FilteredSparseMatrix.cpp  FilteredSparseMatrix.h  FilteredSparseMatrix.hpp  ISequenceSet.h  ISparseMatrix.h  JaggedMatrix.h  MultiSequence.cpp  MultiSequence.h  PackedSparseMatrix.cpp  PackedSparseMatrix.h  PackedSparseMatrix.hpp  Sequence.cpp  Sequence.h  SequenceIO.cpp  SequenceIO.h  SparseEntry.h  SparseHelper.cpp  SparseHelper.h  SparseMatrixType.h
realign/QuickProbs/src/Alignment/Multiple/: AlignmentEvaluatorBase.h  AminoAcidProperties.cpp  AminoAcidProperties.h  AuxiliaryStructures.h  BasicMSA.cpp  BasicMSA.h  BufferSet.h  ClusterTree.cpp  ClusterTree.h  ColumnRefinement.cpp  ColumnRefinement.h  Common.h  Configuration.cpp  Configuration.h  ConfigurationHelper.h  ConsistencyStage.cpp  ConsistencyStage.h  ConstructionStage.cpp  ConstructionStage.h  EntropyEvaluator.cpp  EntropyEvaluator.h  ExpPartitionFunctionParams.h  ExtendedMSA.cpp  ExtendedMSA.h  GuideTree.cpp  GuideTree.h  HierarchicalTree.cpp  HierarchicalTree.h  IAlgorithmStage.h  IPartitionFunctionParams.h  IRefinementObserver.h  LogPartitionFunctionParams.h  MemoryPool.h  MetaPosteriorStage.cpp  MetaPosteriorStage.h  NewickTree.cpp  NewickTree.h  Node.h  ParallelProbabilisticModel.cpp  ParallelProbabilisticModel.h  (+26 more)
realign/QuickProbs/src/Alignment/Pairwise/: AminoAcidMatrices.cpp  AminoAcidMatrices.h  AminoAcidMatrices.hpp  Backtrack.cpp  Backtrack.h  IPairwiseAligner.h  NeedlemanWunsch.cpp  NeedlemanWunsch.h  NucleotideHmmGTR5.cpp  NucleotideHmmGTR5.h  NucleotideMatrices.cpp  NucleotideMatrices.h  NucleotideMatrices.hpp  PairHmm.cpp  PairHmm.h  PairHmmFactory.h  PfamHmm5.cpp  PfamHmm5.h  ProteinHmm3.cpp  ProteinHmm3.h  ProteinHmm5.cpp  ProteinHmm5.h  Scoring.h  ScoringFactory.h  SmithWaterman.cpp  SmithWaterman.h
realign/QuickProbs/src/Common/: Array.h  CMakeLists.txt  Log.cpp  MemoryTools.cpp  ProgramOptions.cpp  ProgramOptions.h  ProgramOptions2.h  StatisticsProvider.cpp  StatisticsProvider.h  Timer.h  deterministic_random.cpp  deterministic_random.h  mathex.cpp  mathex.h
realign/QuickProbs/src/Console/: CMakeLists.txt  main.cpp
realign/QuickProbs/src/Console-OpenCL/: CMakeLists.txt  main-opencl.cpp
realign/QuickProbs/src/Hardware/: Buffer.cpp  Buffer.h  CMakeLists.txt  DeviceInfo.cpp  DeviceInfo.h  DeviceWrapper.cpp  Kernel.h  OpenCl.cpp  OpenCl.h  PlatformInfo.h
realign/QuickProbs/src/KernelAlignment/: CMakeLists.txt  KernelFactory.cpp  KernelFactory.h  KernelRepository.cpp  KernelRepository.h  process_kernel_files.py
realign/QuickProbs/src/KernelAlignment/Kernels/: AuxiliaryStructures.cl  BinarySearch.cl  Finalization.cl  Finalization_long.cl  LogarithmUtils.cl  MemoryTransfers.cl  MultipleConsistencyUtils.cl  MultipleConsistency_old.cl  MultipleFinalization.cl  MultiplePartition.cl  MultipleProbabilistic.cl  MultipleSparse.cl  Partition.cl  PartitionLogarithm.cl  PartitionLogarithm_fast.cl  PartitionLogarithm_long.cl  PartitionLogarithm_long_fast.cl  Partition_long.cl  Probabilistic.cl  Probabilistic_long.cl  Random.cl  ScoreType.cl  SparseMatrix.cl  SparseMatrix_long.cl  Utils.cl
realign/QuickProbs/src/KernelAlignment/Multiple/: ITasksWave.h  KernelMSA.cpp  KernelMSA.h  KernelSet.cpp  KernelSet.h  PosteriorTasksWave.cpp  PosteriorTasksWave.h  QuickConsistencyStage.cpp  QuickConsistencyStage.h  QuickPosteriorStage.cpp  QuickPosteriorStage.h  RelaxationKernelWrapper.h  RelaxationSector.cpp  RelaxationSector.h
realign/QuickProbs/src/tcmalloc/: CMakeLists.txt
realign/QuickProbs/src/tcmalloc/gperftools/: tcmalloc.h.in
ref/: 12s112  12t110  12t116  12t119  136t27  140t11  581s12  581s14  581s15  620t11  _10t10  _10t13  _12s19  _12s70  _12s74  _12t82  _139s4  _139s6  _140s9  _140t7  _144s2  _22s36  _22s41  _22s46  _22s55  _22s56  _22t40  _22t48  _22t58  _22t59  _249t2  _294t3  _294t4  _316t3  _429s9  _437s2  _437s5  _451t1  _468s1  _490s5  (+52 more)
tmp/: head_ret.msa  tmp_pid.txt
utils/: Detect_Unreliable_Family.py  Detect_Unreliable_Regions.py  calculate_column_scores.py  classifier_altered_pnpprobs.py  classifier_c_p_np_aln.py  classifier_realign_strategy.py  classifier_region_min_length.py  do_realign.py  get_TC_SP.py  postprocessing_msa_file.py  prepare_features_4_classifier_1.py  preprocessing_seq_file.py  reliable_regions.py  seperate_regions.py  unreliable_regions.py  utils.py
(+19050 files in other folders)
